--- a/index.html
+++ b/index.html
@@ -7,13 +7,25 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
+  <header>
     <h1>Curso Intensivo de ChatGPT</h1>
-    <p>Esta página es para que tú (papá) puedas escribir tus dudas y Jordi te pueda responder y guiar paso a paso. También puedes abrir ChatGPT directamente desde aquí.</p>
+    <nav>
+      <button onclick="mostrarGuia()">¿Cómo usar ChatGPT?</button>
+      <button onclick="mostrarEjemplos()">Ejemplos útiles</button>
+      <button onclick="reiniciar()">Reiniciar todo</button>
+    </nav>
+  </header>
 
-    <div class="link-chatgpt">
-      👉 <a href="https://chat.openai.com" target="_blank">Haz clic aquí para abrir ChatGPT</a>
-    </div>
+  <main>
+    <section id="instrucciones">
+      <p>Bienvenido, papá. Aquí puedes escribir tus dudas y Jordi te guiará paso a paso. También puedes abrir ChatGPT directamente desde aquí:</p>
+      <div class="link-chatgpt">
+        👉 <a href="https://chat.openai.com" target="_blank">Haz clic aquí para abrir ChatGPT</a>
+      </div>
+    </section>
+
+    <section id="guias" class="oculto"></section>
+    <section id="ejemplos" class="oculto"></section>
 
     <h2>Tu conversación con Jordi:</h2>
     <div class="chat-box" id="chatBox"></div>
@@ -22,7 +34,7 @@
 
     <h3>Indicaciones de Jordi:</h3>
     <div class="guide-box" id="guideBox"></div>
-  </div>
+  </main>
 
   <script src="script.js"></script>
 </body>
